[tool.poetry]
name = "dehazing"
version = "1.0.2"
description = "Dehazing using Dark Channel Prior"
authors = ["Philip Kahn <pkahn@costar.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tigerhawkvok/image-dehazing"

[tool.poetry.dependencies]
python = "^3.7.5"
ImageHash = "~4.1.0"
Pillow = "^8.1.0"
numba = "~0.49.1"
numpy = "~1.19.0"
pandas = "~1.0.0"
scikit_image = "~0.17.0"
# cupy = "~2.0.0" # Uncomment this line if you have a CUDA-enabled system

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
